.golden/85163210393859768/golden

INITIALPATH:7:11: error:
    • INITIALPATH:7:18:
  |
7 | main = [f|{1 + - / lalalal}|]
  |                  ^
Parse error: /

    • In the quasi-quotation: [f|{1 + - / lalalal}|]
  |
7 | main = [f|{1 + - / lalalal}|]
  |           ^^^^^^^^^^^^^^^^^^^
